fix: education and skills section not wrapping

--- a/styles/index.css
+++ b/styles/index.css
@@ -68,9 +68,22 @@
 /* Limit education and skills list width */
 .about > .about-edu, .about > .about-skills {
     width: 45vw;
-    min-width: 30em;
+    /* min-width: 20em; */
     max-width: 45%;
     text-align: left;
     box-sizing: border-box;
     padding: 0 4em 0 4em;
+}
+
+/* Display education and skills vertically on mobile */
+@media (max-width: 900px) {
+    .about {
+        flex-direction: column;
+        align-items: center;
+    }
+    .about > .about-edu, .about > .about-skills {
+        width: 75vw;
+        max-width: 75%;
+        padding: 0;
+    }
 }
